style/base.css
/*
    See the JupyterLab Developer Guide for useful CSS Patterns:

    https://jupyterlab.readthedocs.io/en/stable/developer/css.html
*/
.library-container {
  max-height: 100vh;
  overflow-y: scroll;
  overflow-x: hidden;
}

.library-title {
  font-size: large;
  font-weight: bolder;
  border-bottom: 2px solid black;
  padding-bottom: 5px;
  box-shadow: 0px 2px 0px black;
  padding: 10px;
}

.library-sort {
    
}

.template-item {
}

.template-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 3px;
}

.template-toggle {
  background-color: transparent;
  border: none;
  font-size: 1rem;
  font-family: monospace;
  padding: 3px;
}

.template-buttons {
  display: flex;
  background-color: transparent;
  gap: 2px;
  padding: 3px;
}

.template-content {
  padding: 3px;
}

.template-name,
.rename-input {
  font-size: 1rem;
  width: 100%;
  padding: 3px;
  min-width: 100px;
  border: 1px solid transparent;
  display: inline-block;
}

.rename-input {
  box-sizing: border-box;
}

.template-snippet,
.edit-content-textarea {
  font-size: medium;
  white-space: pre-wrap; /* Preserve spaces and line breaks */
  font-family: monospace; /* Maintain code styling */
  margin: 10px;
  padding: 10px;
  min-height: 15px;
  resize: none;
  border: 1px solid transparent;
  background-color: #f1f1f1;
}

.template-snippet {
  cursor: grab;
}

/* style and layout stays the same when editing, only colors border */
.edit-content-textarea {
  width: 95%;
  box-sizing: border-box;
}

.template-date {

}

